--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,14 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# package directories
+node_modules
+jspm_packages
+
+# Serverless directories
+.serverless
+
+# package directories
+node_modules
+jspm_packages
